[package]
name = "IpLogger"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.26"
egui = "0.26"
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1"
rfd = "0.14"
notify-rust = "4.11.0"
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.30"
egui_extras = "0.26"


[profile.dev]
opt-level = 0
debug = true
